# nvi_etl

./: .env.example  .gitignore  ETL_BASICS.md  README.md  SETUP.md  config.toml.template  context_update_scripy.py  gather.ipynb  indicator_reference.xlsx  logging_config.json  orchestration.excalidraw  pyproject.toml  requirements.txt  survey_2026_checkout.ipynb  the_gathering.py  towide.ipynb
2023/conf/: .conf
2024/: archive_data.py  validate_data.py
analysis/: violent_crime_summary_20250813.sql
archive/primary_survey_v2024/: load_data.py  nvi_2024_processor.py  nvi_survey.py  test_primary_transform.ipynb  transform_data.py
archive/secondary_acs_v2024/: create_summary.py  process_acs_2024.py  transform.py
aux_geography/2023/: extract.py  load.py  process_nvi_cd_tract_crosswalk_2023.py  process_nvi_council_districts_2023.py  transform.py  validate.py
aux_geography/2024/: extract.py  load.py  process_nvi_cd_tract_crosswalk_2024.py  (+5 more)
nvi_etl/: __init__.py  aggregations.py  cli.py  config.py  db.py  destinations.py  geo.py  geo_reference.py  registry.py  reshape.py  schema.py  survey_unpack.R  upsert.py  utilities.py
primary_survey/: new_survey.ipynb
secondary_acs_v2/: process_acs.py  transform.py
secondary_evictions/: README.md  extract.py  transform.py
secondary_ipds/: Building_Permits_2024.sql  res_property.sql  tax_foreclosures.ipynb
secondary_mischooldata/: process_mischooldata.py  process_mischooldata_2024.py
secondary_msc/: Building_Permits_2024.sql  CDO_Service_Area_Percent.sql  Crash(Auto and Ped-Bike).sql  RMS Incidents.sql  Third_Grade_Met_ELA_2023.sql  Vital_Births_2023_Adequate_Care.ipynb  res_property.sql
tests/: test_transform_data.py
(+290 files in other folders)
