[project]
name = "nvi-etl"
version = "0.1.0"
description = "The package for loading all NVI survey questions and secondary data into the database."
authors = [{ name = "mikevatd3", email = "mike@datadrivendetroit.org" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.10, <3.13"
dependencies = [
    "geoalchemy2>=0.18.4",
    "geopandas>=1.1.3",
    "jupyter>=1.1.1",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pandera>=0.29.0",
    "psycopg>=3.3.3",
    "psycopg-binary>=3.3.3",
    "sqlalchemy>=2.0.48",
    "tomli>=2.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
